:lipstick: Fix a minor responsive layout issue.

--- a/src/assets/toolkit/styles/components/_blocks.scss
+++ b/src/assets/toolkit/styles/components/_blocks.scss
@@ -53,8 +53,12 @@
   }
 
   &__content {
+    @include media($bp-mobile-up) {
+      width: 30rem;
+    }
+
     float: left;
-    width: 30rem;
+    padding: 1rem;
   }
 
   &__copy {
